// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Featured film card correctly renders when needVanish not passed renders div wrapper 1`] = `
<div
  className="movie-card__info"
>
  <div
    className="movie-card__poster "
  >
    <img
      alt="The Aftermath poster"
      height="327"
      src="https://m.media-amazon.com/images/M/MV5BMTk2MDEyNTE5M15BMl5BanBnXkFtZTgwMzY1NDM4NjM@._V1_SY1000_CR0,0,674,1000_AL_.jpg"
      width="218"
    />
  </div>
  <div
    className="movie-card__desc"
  >
    <h2
      className="movie-card__title"
    >
      The Aftermath
    </h2>
    <p
      className="movie-card__meta"
    >
      <span
        className="movie-card__genre"
      >
        Drama, Romance, War
      </span>
      <span
        className="movie-card__year"
      >
        2019
      </span>
    </p>
    <div
      className="movie-card__buttons"
    >
      <button
        className="btn btn--play movie-card__button"
        onClick={[Function]}
        type="button"
      >
        <svg
          height="19"
          viewBox="0 0 19 19"
          width="19"
        >
          <use
            xlinkHref="#play-s"
          />
        </svg>
        <span>
          Play
        </span>
      </button>
      <button
        className="btn btn--list movie-card__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          height="20"
          viewBox="0 0 19 20"
          width="19"
        >
          <use
            xlinkHref="#add"
          />
        </svg>
        <span>
          My list
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Featured film card correctly renders when needVanish not passed renders without wrapper 1`] = `
Array [
  "",
  <div
    className="movie-card__desc"
  >
    <h2
      className="movie-card__title"
    >
      The Aftermath
    </h2>
    <p
      className="movie-card__meta"
    >
      <span
        className="movie-card__genre"
      >
        Drama, Romance, War
      </span>
      <span
        className="movie-card__year"
      >
        2019
      </span>
    </p>
    <div
      className="movie-card__buttons"
    >
      <button
        className="btn btn--play movie-card__button"
        onClick={[Function]}
        type="button"
      >
        <svg
          height="19"
          viewBox="0 0 19 19"
          width="19"
        >
          <use
            xlinkHref="#play-s"
          />
        </svg>
        <span>
          Play
        </span>
      </button>
      <button
        className="btn btn--list movie-card__button"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          height="20"
          viewBox="0 0 19 20"
          width="19"
        >
          <use
            xlinkHref="#add"
          />
        </svg>
        <span>
          My list
        </span>
      </button>
    </div>
  </div>,
]
`;
